# pyReborn

./: .gitignore  API_QUICKSTART.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PROTOCOL_WIKI.md  README.md  REFACTORING_PLAN.md  TODO.md  baseline_results.json  pyproject.toml  quick_test.py  requirements.txt  setup.py  show_all_packets_live.py  test_refactor.py  verify_architecture.py
docs/: API_REFERENCE.md  BOT_COOKBOOK.md  EVENT_REFERENCE.md  EXTENDING_PYREBORN.md  FULL_API_REFERENCE.md  GETTING_STARTED.md  GMAP_FIX_SUMMARY.md  GMAP_SEGMENT_RENDERING_FIX.md  GMAP_SEGMENT_TRANSITIONS.md  GMAP_TILE_ENCODING.md  GMAP_UNDERSTANDING.md  GRAAL_PROTOCOL_GUIDE.md  GSERVER_API_COVERAGE_REPORT.md  GSERVER_V2_NEW_FEATURES.md  GSERVER_V2_UPDATES.md  IMPLEMENTATION_ROADMAP.md  MOVEMENT_GUIDE.md  NICKNAME_CHANGE_GUIDE.md  PLI_PLAYERPROPS_FORMAT.md  PROPERTY_FUNCTIONS_GUIDE.md  README.md  SERVERLIST_INTEGRATION.md  index.md  mkdocs.yml  refactoring-recommendations.md
docs/classic-client/: development.md  overview.md
docs/packets/: coverage_report.txt
docs/pyreborn/: api-reference.md  architecture.md  bot-development.md
examples/: README.md  __init__.py  carry_sprite_demo.py  custom_handler_example.py  feature_demo.py  full_feature_demo.py  interactive_demo.py  modular_test_bot.py  player_detection_demo.py  serverlist_browser_demo.py  serverlist_demo.py  simple_demo.py  spacemanspiff_follower.py  test_bot.py  test_connection.py  test_serverlist.py  trash_talking_bot.py
examples/api/: async_example.py  builder_example.py  complete_api_showcase.py  context_manager_example.py  event_handling_example.py
examples/bots/: basic_bot.py  comprehensive_test_bot.py  coordinate_example_bot.py  dance_bot.py  echo_bot.py  echo_bot_chat_bubbles.py  exploration_bot.py  follower_bot.py  guard_bot.py  movement_example_bot.py  patrol_bot.py  quest_bot.py  simple_bot.py  trader_bot.py
examples/games/: animation_manager.py  bush_handler.py  classic_constants.py  classic_reborn_client.py  connection_manager.py  game_state.py  gani_parser.py  input_manager.py  item_manager.py  makeArrays.java  physics.py  pygame_client.py  pygame_client_browser.py  renderer.py  run_animation_test.py  server_browser.py  tag_game.py  test_serverlist.py  tile_defs.py  ui_manager.py
examples/utilities/: chat_logger.py  level_snapshot.py  player_tracker.py  server_monitor.py  server_report_final.json
game_tester/: __init__.py  __main__.py  bug_detector.py  exercise.py  exercise_nc.py  exercise_rc.py  explorer.py  game_bot.py  gmap_tests.py  multi_bot.py  packet_coverage.py  reporter.py  screenshots.py
pyreborn/: README.md  __init__.py  actions.py  api.py  board_collector.py  client.py  client_refactored.py  corrected_tile_mapping.py  encryption.py  events.py  example_pygame.py  gani.py  gmap_utils.py  gs1_client.py  gs1_interpreter.py  inventory_ui.py  level_manager.py  level_parser.py  level_renderer.py  listserver.py  models.py  nc_client.py  npc_handler.py  packet_api.py  packets.py  player.py  protocol.py  pygame_game.py  pygame_screens.py  raw_data_handler.py  rc_client.py  reborn_client.py  server_info.py  server_tile_mapping.py  server_tile_mapping_final.py  serverlist.py  session.py  sounds.py  sprites.py  text_data_handler.py  (+3 more)
pyreborn/action_modules/: __init__.py  combat.py  npcs.py
pyreborn/actions/: __init__.py  core_actions.py  items.py
pyreborn/advanced_api/: __init__.py  async_client.py  builder.py  decorators.py  extensible_client.py  game_actions.py
pyreborn/communication/: __init__.py  communication_manager.py
pyreborn/compat/: legacy_client.py
pyreborn/config/: __init__.py  client_config.py  validation.py
pyreborn/connection/: __init__.py  connection_manager.py  operation_recovery.py  resilience_manager.py  simple_version_manager.py  socket_manager.py  version_codecs.py  version_manager.py  versions.py
pyreborn/core/: __init__.py  board_collector.py  cache_manager.py  client.py  connection_manager.py  connection_resilience.py  container.py  encryption.py  error_handling.py  events.py  interfaces.py  middleware.py  modular_client.py  operation_recovery.py  packet_processor.py  plugin_system.py  raw_data_handler.py  reborn_client.py  session_state_manager.py  simple_consolidated_client.py  text_data_handler.py
pyreborn/extensions/: __init__.py
pyreborn/game/: __init__.py  actions.py  assets.py  camera.py  collision.py  constants.py  hud.py  input.py  minimap.py  queries.py  render.py  render_effects.py  render_entities.py  render_objects.py  render_world.py  setup.py  state.py  tile_editor.py  ui.py  viewport.py
pyreborn/gameplay/: __init__.py  action_manager.py  combat_manager.py  gameplay_manager.py  item_manager.py  level_adapter.py  movement_coordinator.py  npc_manager.py  position_manager.py  pygame_integration.py  transition_manager.py  weapon_manager.py
pyreborn/gmap_api/: __init__.py  gmap_render_api.py
pyreborn/handlers/: __init__.py  base.py  board_handlers.py  chat_handlers.py  combat_handlers.py  initial_props_parser.py  level_handlers.py  login_handlers.py  packet_handler.py  player_handlers.py  registry.py
pyreborn/managers/: __init__.py  combat_manager.py  gmap_manager.py  item_manager.py  level_manager.py  manager_factory.py  npc_manager.py  session.py  (+3 more)
tests/: test_gserver_v2_features.py
tools/: chest_pick.json  chest_picker.py  lift_pick.json
trash/: CLEANUP_ROUND2_SUMMARY.md  CLEANUP_SUMMARY.md  events_enhanced.py  server_tile_mapping.py
(+571 files in other folders)
