[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreborn"
dynamic = ["version"]
description = "A Python library for connecting to GServer (Graal Reborn) servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PyReborn Contributors"},
]
keywords = ["graal", "gserver", "game", "networking", "protocol", "client", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    # No external dependencies - uses only standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]
examples = [
    # No additional dependencies for examples
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pyReborn"
"Bug Reports" = "https://github.com/yourusername/pyReborn/issues"
"Source" = "https://github.com/yourusername/pyReborn"
"Documentation" = "https://github.com/yourusername/pyReborn/blob/main/docs/GRAAL_PROTOCOL_GUIDE.md"

[project.scripts]
pyreborn-test = "pyreborn.examples.test_connection:main"

[tool.setuptools.dynamic]
version = {attr = "pyreborn.__version__"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["src"] by default)
include = ["pyreborn*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (["tests*"] by default)

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]